basic overview menu added

--- a/simple-erp-web-client/src/app/start-menu/start-menu.component.html
+++ b/simple-erp-web-client/src/app/start-menu/start-menu.component.html
@@ -1,1 +1,10 @@
-<p>start-menu works!</p>
+<div class="container">
+  <div class="columns is-marginless">
+    <app-module-card
+      *ngFor="let item of moduleItems"
+      class="column"
+      text="{{ item.text }}"
+      route="{{ item.route }}"
+    ></app-module-card>
+  </div>
+</div>
