--- a/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
@@ -15,6 +15,19 @@
         </div>
       </div>
       <div class="field">
+        <label class="label">Produkt</label>
+        <div class="control">
+          <div class="select">
+            <select>
+              <option selected value=0>Välj produkt</option>
+              <option *ngFor="let product of products" value={{product.id}}>{{
+                product.name
+              }}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="field">
         <label class="label">Typ av leverans & kvantitet</label>
         <div class="control">
           <div class="select">
