--- a/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
@@ -6,10 +6,12 @@
         <div class="control">
           <div class="select">
             <select>
-              <option selected value=0>Välj lager</option>
-              <option *ngFor="let location of stockLocations" value={{location.stockNumber}}>{{
-                location.city
-              }}</option>
+              <option selected value="0">Välj lager</option>
+              <option
+                *ngFor="let location of stockLocations"
+                value="{{ location.stockNumber }}"
+                >{{ location.city }}</option
+              >
             </select>
           </div>
         </div>
@@ -19,10 +21,12 @@
         <div class="control">
           <div class="select">
             <select>
-              <option selected value=0>Välj produkt</option>
-              <option *ngFor="let product of products" value={{product.id}}>{{
-                product.name
-              }}</option>
+              <option selected value="0">Välj produkt</option>
+              <option
+                *ngFor="let product of products"
+                value="{{ product.id }}"
+                >{{ product.name }}</option
+              >
             </select>
           </div>
         </div>
@@ -32,8 +36,8 @@
         <div class="control">
           <div class="select">
             <select>
-              <option value=1 selected>inleverans</option>
-              <option value=-1>utleverans</option>
+              <option value="1" selected>inleverans</option>
+              <option value="-1">utleverans</option>
             </select>
           </div>
         </div>
@@ -55,7 +59,7 @@
           </a>
         </div>
       </div>
-      <br/>
+      <br />
       <div class="field is-grouped is-grouped-centered">
         <div class="control">
           <button class="button is-link">Registrera</button>
