Changed form on response data of API routes.

--- a/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
@@ -19,7 +19,7 @@
               <option selected value="0">Välj lager</option>
               <option
                 *ngFor="let location of stockLocations$ | async"
-                value="{{ location.stockNumber }}"
+                value="{{ location.stock_nr }}"
                 >{{ location.city }}</option
               >
             </select>
