--- a/simple-erp-web-client/src/app/start-menu/start-menu.component.html
+++ b/simple-erp-web-client/src/app/start-menu/start-menu.component.html
@@ -4,5 +4,6 @@
     class="column"
     text="{{ item.text }}"
     route="{{ item.route }}"
+    icon="{{ item.icon }}"
   ></app-module-card>
 </div>
