--- a/simple-erp-web-client/src/app/navbar/navbar.component.html
+++ b/simple-erp-web-client/src/app/navbar/navbar.component.html
@@ -1,14 +1,15 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" [routerLink]="['/']">
-        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
-      </a>
-<!--   
+  <div class="navbar-brand">
+    <a class="navbar-item" [routerLink]="['/']">
+      <!-- <img src="assets/logo.png" alt="SimpleERP logo" width="112" height="28"> -->
+        <img src="assets/logo.png" alt="SimpleERP logo" />
+    </a>
+    <!--   
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
        -->
-    </div>
-  </nav>
+  </div>
+</nav>
