--- a/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-module.component.html
@@ -13,84 +13,6 @@
     </div>
   </div>
   <div *ngIf="!(transactionSuccess || transactionFail)" class="column">
-    <div class="box">
-      <div class="field">
-        <label class="label">Färdigvarulager</label>
-        <div class="control">
-          <div class="select">
-            <select #stockLocation>
-              <option selected value="0">Välj lager</option>
-              <option
-                *ngFor="let location of stockLocations$ | async"
-                value="{{ location.stock_nr }}"
-                >{{ location.city }}</option
-              >
-            </select>
-          </div>
-        </div>
-        <p *ngIf="error.stock" class="help is-danger">
-          Vänligen välj färdigvarulager.
-        </p>
-      </div>
-      <div class="field">
-        <label class="label">Produkt</label>
-        <div class="control">
-          <div class="select">
-            <select #product>
-              <option selected value="0">Välj produkt</option>
-              <option
-                *ngFor="let product of products$ | async"
-                value="{{ product.id }}"
-                >{{ product.name }}</option
-              >
-            </select>
-          </div>
-        </div>
-        <p *ngIf="error.product" class="help is-danger">
-          Vänligen välj produkt.
-        </p>
-      </div>
-      <div class="field">
-        <label class="label">Typ av leverans & kvantitet</label>
-        <div class="control">
-          <div class="select">
-            <select #transactionType>
-              <option value="0" selected>Välj leveranstyp</option>
-              <option value="1">inleverans</option>
-              <option value="-1">utleverans</option>
-            </select>
-          </div>
-        </div>
-        <p *ngIf="error.transactionType" class="help is-danger">
-          Vänligen välj leveranstyp.
-        </p>
-      </div>
-      <div class="field has-addons">
-        <div class="control">
-          <input #quantity class="input" type="text" />
-        </div>
-      </div>
-      <p *ngIf="error.quantity" class="help is-danger">
-        Vänligen fyll i en kvantitet som är större än 0.
-      </p>
-      <br />
-      <div class="field is-grouped is-grouped-centered">
-        <div class="control">
-          <button
-            (click)="
-              submitTransaction(
-                stockLocation.value,
-                product.value,
-                transactionType.value,
-                quantity.value
-              )
-            "
-            class="button is-link"
-          >
-            Registrera
-          </button>
-        </div>
-      </div>
-    </div>
+    <app-transaction-form (transactionSuccess)="transactionRespons($event)"></app-transaction-form>
   </div>
 </div>
