Fancy transaction view
The transaction view now shows current quantity of given product
at a given location

--- a/simple-erp-web-client/src/app/transaction-module/transaction-current-status/transaction-current-status.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-current-status/transaction-current-status.component.html
@@ -1,1 +1,4 @@
-<p>transaction-current-status works!</p>
+<div class="notification is-info">
+  Just nu finns det {{ currentSelectionStatus.quantity }} st av produkten
+  {{ currentSelectionStatus.product }} i {{ currentSelectionStatus.city }}.
+</div>
