--- a/simple-erp-web-client/src/app/navbar/navbar.component.html
+++ b/simple-erp-web-client/src/app/navbar/navbar.component.html
@@ -2,14 +2,27 @@
   <div class="navbar-brand">
     <a class="navbar-item" [routerLink]="['/']">
       <!-- <img src="assets/logo.png" alt="SimpleERP logo" width="112" height="28"> -->
-        <img src="assets/logo.png" alt="SimpleERP logo" />
+      <img src="assets/logo.png" alt="SimpleERP logo" />
     </a>
-      
-      <a *ngIf="showBurger" [routerLink]="['/']" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
+
+    <a
+      *ngIf="showBurger"
+      [routerLink]="['/']"
+      role="button"
+      class="navbar-burger"
+      aria-label="menu"
+      aria-expanded="false"
+    >
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div class="navbar-menu">
+    <div class="navbar-start">
+      <a *ngIf="showBurger" [routerLink]="['/']" class="navbar-item">
+        Meny
       </a>
-      
+    </div>
   </div>
 </nav>
