--- a/simple-erp-web-client/src/app/transaction-module/transaction-current-status/transaction-current-status.component.html
+++ b/simple-erp-web-client/src/app/transaction-module/transaction-current-status/transaction-current-status.component.html
@@ -1,4 +1,4 @@
-<div class="notification is-info">
+<div class="notification is-info has-text-weight-medium">
   Just nu finns det {{ currentSelectionStatus.quantity }} st av produkten
   {{ currentSelectionStatus.product }} i {{ currentSelectionStatus.city }}.
 </div>
