--- a/simple-erp-web-client/src/app/navbar/navbar.component.html
+++ b/simple-erp-web-client/src/app/navbar/navbar.component.html
@@ -2,7 +2,8 @@
   <div class="navbar-brand">
     <a class="navbar-item" [routerLink]="['/']">
       <!-- <img src="assets/logo.png" alt="SimpleERP logo" width="112" height="28"> -->
-      <img src="assets/logo.png" alt="SimpleERP logo" />
+      <img *ngIf="!production" src="assets/logo.png" alt="SimpleERP logo" />
+      <img *ngIf="production" src="static/assets/logo.png" alt="SimpleERP logo" />
     </a>
 
     <a
